--- a/index.html
+++ b/index.html
@@ -6,6 +6,17 @@
     <title>Curso</title>
 </head>
 <body>
-    <h1>Hola</h1>
+    <h1>Hola</h1> 
+    <form name="contact" netlify>
+        <p>
+            <label>Name <input type="text" name="name" /></label>
+        </p>
+        <p>
+            <label>Email <input type="email" name="email" /></label>
+        </p>
+        <p>
+            <button type="submit">Send</button>
+        </p>
+    </form>
 </body>
 </html>
